# localmind

./: Cargo.toml  README.md  dev.sh
app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  _data.ts  globals.css  layout.tsx  main.tsx  router.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
backend/: .gitignore  chat_handler.py  config.yaml  db.sqlite  llm_client.py  main.py  main.spec  pyproject.toml  requirements.txt  server_config.json  tools_handler.py
backend/alembic/: env.py
backend/chat/: handler.py  system_prompt.py
backend/config/: __init__.py
backend/db/: __init__.py  chat.py
backend/db/model/: __init__.py  base.py  chat.py
backend/llm/: client.py
backend/messages/: send_message.py
backend/model/: chat.py  config.py  openai_config.py  server_config.py
backend/src/: main.py
backend/src/chat/: handler.py
backend/tools/: tools_handler.py
client/: index.html  main.js  package-lock.json  package.json  preload.js  server_config.json
client/chroma/: chroma.sqlite3
filesystem-rag/: index.ts  package-lock.json  package.json  tsconfig.json
rag/: .gitignore  client.py  main.py  requirements.txt  test_client.py
rag/config/: env.py
rag/db/: vector.py
rag/rag/: embed.py  get_vector_db.py  query.py
rag/rag_tools/: embed.py  query.py
rag/tools/: allowed_directories.py  get_file_info.py  list_directory.py  load_split_embed_files.py  query_embedded_files.py  query_files.py  search_files.py
(+26 files in other folders)
